[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/LevelUp.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Next.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[node name="LevelUp" type="Area2D" groups=[
"camera_shaker",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_LevelUp_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
